# SnLTool

./: .gitignore  CMakeLists.txt  MenuMap.aseprite  TODO.txt  main.cpp  make.bat
data/: Potions.json  Spells.json
include/: Character.h  Item.h  SaveHandler.h  Simulator.h  Spell.h
include/Menus/: AddInventoryItemMenu.h  AddPotionMenu.h  AddSpellMenu.h  AllMenus.h  CharacterSaveTypeSelectionMenu.h  CreateCharacterMenu.h  CreateSaveMenu.h  DeleteSaveMenu.h  EditInventoryItemMenu.h  EditStatsMenu.h  IntroMenu.h  MainMenu.h  ModifyHitpointManaMenu.h  SaveLoadMenu.h  SelectCharacterMenu.h  SimulationMenu.h  ViewInventoryMenu.h
old/: ViewStatsMenu.h
src/: SaveHandler.cpp  Simulator.cpp
src/Menus/: AddInventoryItemMenu.cpp  AddPotionMenu.cpp  AddSpellMenu.cpp  CharacterSaveTypeSelectionMenu.cpp  CreateCharacterMenu.cpp  CreateSaveMenu.cpp  DeleteSaveMenu.cpp  EditInventoryItemMenu.cpp  EditStatsMenu.cpp  IntroMenu.cpp  MainMenu.cpp  ModifyHitpointManaMenu.cpp  SaveLoadMenu.cpp  SelectCharacterMenu.cpp  SimulationMenu.cpp  ViewInventoryMenu.cpp  ViewStatsMenu.cpp
